<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_thick">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/about_image"
        android:layout_centerInParent="true"
        android:layout_marginBottom="-58dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/about_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/version"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:src="@drawable/nowplaying">

    </ImageView>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-53dp"
        android:text="@string/version"
        android:textColor="@color/white" />

    <TextView
        android:layout_below="@id/app_name"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:text="@string/credit"
        android:textColor="@color/white"/>

</RelativeLayout>
