<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@color/now_playing">


    <ImageView
        android:id="@+id/playingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@android:dimen/notification_large_icon_width"
        android:src="@drawable/nowplaying" />

    <TextView
        android:id="@+id/current_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/current_song_artist"
        android:layout_centerInParent="true"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/current_song_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/seekbar_timmer"
        android:layout_centerInParent="true"
        android:text="@string/welcome"
        android:textColor="@color/off_white"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/seekbar_timmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/playbackBtn">


        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekbar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:text="@string/current_time"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/stop_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekbar"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/stop_time"
            android:textColor="@color/white"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/playbackBtn"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/fab_margin">

        <ImageView
            android:id="@+id/btnPreviousSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/previous"
            android:layout_marginEnd="@dimen/fab_margin"/>
        <ImageView
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pause"/>
        <ImageView
            android:layout_marginStart="@dimen/fab_margin"
            android:id="@+id/btnNextSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next"
            android:layout_gravity="end"/>
    </LinearLayout>

</RelativeLayout>